# expertise

./: .gitignore  README.md  environment.yml  pyproject.toml
analysis/: analysis.Rmd
data/van_hoef/: Norms.csv
results/catdog/: birdexpert_fastest_cat.csv  catexpert_fastest_dog.csv  default_fastest_dog.csv  dogexpert_fastest_dog.csv
results/fastest/: allexpert_fastest_all.csv_1  arborist_fastest_all.csv  base_precise_all.csv_2  bird_explicit_fastest_all.csv  birdexpert_elaborate_fastest_all.csv  default_fastest_all.csv  flowerexpert_elaborate_fastest_all.csv  flowerexpert_fastest_all.csv  treeexpert_fastest_all.csv
results/gpt_catdog/: birdexpert_fastest_dog.csv  catexpert_fastest_cat.csv  default_fastest_cat.csv  dogexpert_fastest_cat.csv
results/gpt_fastest/: birdexpert_fastest_all.csv  botanist_fastest_all.csv  default_fastest_all.csv  dog_explicit_fastest_all.csv  dogexpert_elaborate_fastest_all.csv  dogexpert_fastest_all.csv  flower_explicit_fastest_all.csv  information_fastest_all.csv  novice_explicit_fastest_all.csv  novice_fastest_all.csv  ornithologist_fastest_all.csv  tree_explicit_fastest_all.csv  treeexpert_elaborate_fastest_all.csv  zoologist_fastest_all.csv
results/gpt_truefalse/: default_subordinate_all_3.csv  default_subordinate_tree.csv  default_subordinate_true.csv
results/llava_catdog/: cat_explicit_fastest_scores.csv  catexpert_elaborate_fastest_scores.csv  catexpert_fastest_scores.csv  default_fastest_scores.csv  (+8 more)
scripts/: list_files.py  llava_utils.py  name_images.py  score_llava.py  subordinate_names.yaml  system_prompts.yaml
(+81 files in other folders)
